--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Demo Game</title>
     </head>
     <body>
+		<div>Click to move me!</div> 
         <canvas id="surface" width="500" height="500" style="border: 1px solid black; background: white"></canvas>
         
 
